@@ -2,7 +2,6 @@ package no.difi.meldingsutveksling;
 
 import lombok.extern.slf4j.Slf4j;
 import no.difi.meldingsutveksling.config.IntegrasjonspunktProperties;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
@@ -18,7 +17,6 @@ public class NtpSyncChecker {
     private final IntegrasjonspunktProperties props;
     private final NTPClient client;
 
-    @Autowired
     NtpSyncChecker(IntegrasjonspunktProperties props) throws UnknownHostException {
         this.props = props;
         client = new NTPClient(props.getNtp().getHost());
@@ -31,10 +29,10 @@ public class NtpSyncChecker {
         try {
             offset = client.getOffset();
         } catch (IOException e) {
-            log.error(String.format("Error connecting to NTP host %s", props.getNtp().getHost()), e);
+            log.error("Error connecting to NTP host %s".formatted(props.getNtp().getHost()), e);
         }
 
-        String errorMsg = String.format("Offset from NTP host %s is %sms. An offset greater than 9s might lead to problems with OIDC. Consider readjusting the system clock.", props.getNtp().getHost(), offset);
+        String errorMsg = "Offset from NTP host %s is %sms. An offset greater than 9s might lead to problems with OIDC. Consider readjusting the system clock.".formatted(props.getNtp().getHost(), offset);
         if (Math.abs(offset) > 9000) {
             log.error(errorMsg);
         } else if (Math.abs(offset) > 5000) {
